<resources>
    <string name="app_name">AppMovilSIGE</string>
    <string name="prefs_file">pe.insn.SIGE.PREFERENCE_FILE_KEY</string>
    <string name="facebook_app_id">2577535259222798</string>
    <string name="fb_login_protocol_scheme">fb2577535259222798</string>
    <string name="tvbienvenidosLOG">Bienvenido!</string>
    <string name="saludo_login">Hola! Registrate</string>
    <string name="valetcorreo">USUARIO</string>
    <string name="valetpass">CONTRASEÑA</string>
    <string name="valetolvidemicontraseña">Olvidé mi contraseña</string>
    <string name="valbtningresar">Ingresar</string>
    <string name="valtvregistrateconfb">O registrate usando</string>
    <string name="valtvregistrate">¿No tienes una cuenta? <b>Registrate aquí</b></string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="valtvmensajesplash">Nosotros luchamos por ti, tú quedate en casa por nosotros</string>
    <string name="valtituloregistrouser">Registrate y forma parte de nosotros!</string>
    <string name="valetdni">DNI</string>
    <string name="valetnombre">NOMBRE</string>
    <string name="valetapellido">APELLIDO</string>
    <string name="valetfechanac">FECHA DE NACIMIENTO</string>
    <string name="valetdireccion">DIRECCIÓN</string>
    <string name="valettiposangre">TIPO DE SANGRE</string>
    <string name="valetpeso">PESO</string>
    <string name="valettalla">TALLA</string>
    <string name="valetnumero">NUMERO</string>
    <string name="valetalergias">ALERGIAS</string>
    <string name="valetemail">EMAIL</string>
    <string name="valetpassword">CONTRASEÑA</string>
    <string name="valbtnsignout">Cerrar Sesión</string>
    <string name="valetbienvenido">¡Bienvenido! ¿Necesitas ayuda?</string>
    <string name="valetdescripcion">¿Qué sucedió?</string>
    <string name="title_activity_ubicacion">Map</string>
    <string name="valetdescribeemergencia">Describe la emergencia</string>
    <string name="valetubicacion">Tu ubicación</string>
    <string name="valbtnconfirmarsoli">CONFIRMAR</string>
    <string name="valbtncancelar">CANCELAR</string>
    <string name="valtvmensajeespera">Su unidad de emergencia está en camino...</string>
    <string name="tvnrosoli">N° Solicitud de emergencia</string>
    <string name="tvnombrepac">Nombre :</string>
    <string name="tvapellidopac">Apellido :</string>
    <string name="tvdnipac">DNI :</string>
    <string name="tvdescripcionemergencia">Descripción de la emergencia</string>
    <string name="tvttitdatosatencion">Datos de atención</string>
    <string name="tvcargo">Cargo :</string>
    <string name="tvtitdescpersonal">Personal Asistente</string>
    <string name="valtitdescreporte">Información de la emergencia</string>
    <string name="tvtitulogestusuario">Datos del Usuario</string>
    <string name="etnombreapellido">NOMBRE Y APELLIDO</string>
    <string name="tvtituloreporte">HISTORIAL DE EMERGENCIAS</string>
</resources>