<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.dashboard.PacienteFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="422dp"
        android:layout_height="455dp"
        app:cardBackgroundColor="@color/actionbarOpacity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout15"
                android:layout_width="420dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etnombreapellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etnombreapellido"
                    android:textColor="@color/black"
                    android:textColorHint="?android:attr/textColorHighlight" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorIcon"
                android:fontFamily="@font/annie_use_your_telescope"
                android:text="@string/tvtitulogestusuario"
                android:textColor="@color/md_blue_900"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout16"
                android:layout_width="420dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout17"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etdni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/valetdni"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout17"
                android:layout_width="420dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout16">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etfechanac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/valetfechanac"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout18"
                android:layout_width="420dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout17">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etdireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/valetdireccion"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btncerrarsesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:text="@string/valbtnsignout"
        android:textColor="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>